--- a/R4G_course.Rmd
+++ b/R4G_course.Rmd
@@ -1210,7 +1210,11 @@ Most of the ones offered in `poppr` work for individuals (rather than population
 
 **Note:** several of these distance measures make strong assumptions about the biological nature of our genetic samples.
 
-Let's try another measure that does not make such assumptions: the *Prevosti's distance*, which we can use with `prevosti.dist()`. We again restrict our analysis to `Pop1` to begin with:
+Let's try another measure that does not make such assumptions: the *Prevosti's distance*, which we can use with `prevosti.dist()`.
+
+In our context, the Prevosti's distance is a measure of the mean absolute difference in allele frequencies across all alleles and loci between 2 populations. It is defined as $D_{\mathrm{pop.x} \ \mathrm{pop.y}} = \frac{1}{2\times\mathrm{nLoc}}\sum^{\mathrm{nLoc}}_{j = 1}\sum^{\mathrm{nAlleles}_j}_{i = 1}|x_{ij} - y_{ij}|$, where $x_{ij}$ is the frequency of the allele $i$ at the locus $j$ in population $x$ and where $y_{ij}$ is the frequency of the allele $i$ at the locus $j$ in population $y$. 
+
+We again restrict our analysis to `Pop1` to begin with:
 
 ```{r plot prevosti small}
 mynj_prevosti <- nj(prevosti.dist(seppop(myData)[["Pop1"]]))
